决策树、支持向量机、Adaboost

--- a/第6章 挖掘建模/txt/6-5 决策树.md
+++ b/第6章 挖掘建模/txt/6-5 决策树.md
@@ -6,7 +6,7 @@ Entropy(Strong) = 8/14*log(8/14)+6/14*log(6/14)
 
 连续值切分：将连续值进行排序，对每个间隔进行切分，取该因子性能最好的间隔作为切分
 规则用尽：特征已用完，数据仍然没有切分干净，可以通过投票的方式，哪个样本多用哪个，或者重复使用某个特征
-过拟合：
+过拟合：为了得到一致假设而使假设变得过度严格称为过拟合，即在测试集模型表现欠佳
 修枝剪叶
 前剪枝：构造决策树之前规定了有多少个样本或者规定了决策树的最大深度
 后剪枝：构造决策树之后对样本数悬殊的枝叶进行修剪
