--- a/第6章 挖掘建模/txt/6-19~6-20 关联-关联规则.md
+++ b/第6章 挖掘建模/txt/6-19~6-20 关联-关联规则.md
@@ -4,6 +4,7 @@
 
 总共有七个事物，牛奶、啤酒和尿布分别称为项目，牛奶、啤酒和尿布又被称为项集
 
+频繁项集：某个项集的支持度大于设定阈值
 一个项集有多少个项目就叫"X"项集
 频繁项集有多少个项目叫做"X"频繁项集
 
@@ -21,8 +22,17 @@
 根据6-19 关联例题2
 提升度小于1没有显著提升作用
 
+根据6-19 Apriori
 实心红方框中1代表1频繁项集，空心红方框中2代表2非频繁项集
 两个一频繁项集组成一个二项集不一定是频繁项集
 一频繁项集和二频繁项集组成一个二项集不一定是频繁项集
 两个一非频繁项集无法组成一个一频繁项集
 一个非频繁项集和一个频繁项集组合的项集肯定是不频繁的
+
+Apriori-all
+Forward:Apriori
+Backward:去掉时间序列后的项对之前的项的支持
+
+AprNode:项集
+APrLayer:是几项集
+AprBlk:由AprNode和APrLayer构成
